tests/error/type_match/typename_array2.bz
function test1(T: [??: *typename]);

function test()
{
	test1([7: int32]);
}
